corrected spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,8 +22,12 @@ hr {
 	z-index: 999;
 }
 
+.h1-textShadow-header {
+	text-shadow: .5px 1px black;
+}
+
 .h1-textShadow {
-	text-shadow: 1px 2px black;
+	text-shadow: .5px 1px white;
 }
 
 .pages-headline {
@@ -354,6 +358,15 @@ video.fillWidth {
 	 	bottom: 58%;
 	}
 }
+
+@media screen and (max-width: 1131px) and (min-width: 822px) {
+	.arrow {
+		position: absolute;
+	  	left: 42%;
+	 	bottom: 53%;
+	}
+}
+
 
 .bounce {
   -moz-animation: bounce 2s infinite;
